# DashboardFineTunerPPOCR

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  setup.py
data/results/: test_01.json
models/: doc_orientation.py
notebooks/: model_experimentation.ipynb
src/: server.py
src/_models/: __init__.py  _load_ocr.py
src/config/: base.py
src/routes/: __init__.py  api_routes.py  model_routes.py  router_registry.py
src/trainer/: __init__.py  _train.py
