[project]
name = "DashboardFineTunerPPOCR"
version = "0.1.0"
description = "Backend API for fine-tuning an OCR model via dashboard."
authors = [{ name = "Jyotsan Hamal", email = "hamaljyotsan@gmail.com" }]
dependencies = [
  "pylint>=2.17",
  "black>=23.3.0",
  "pre-commit>=3.3.3",
  "requests>=2.31.0",
  "fastapi>=0.115.12",
  "uvicorn>=0.34.2",
]

[tool.black]
line-length = 88
target-version = ["py38"]

# Optionally, pre-commit config can go under [tool.pre-commit]
